improve main page
